# soa-c

./: .eslintignore  .eslintrc  .gitignore  .lintstagedrc  .prettierignore  .prettierrc.js  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  package.json  pnpm-lock.yaml  tsconfig.json
docs/schema/: descriptor.json
examples/: sceneNode.json  scene_node.json
examples/sceneNode/: SceneNode.c  SceneNode.h  sceneNode.h
scripts/: common.sh  genConstants.js  prebuild.sh
src/: descriptor.ts  index.ts  makeCIdentifier.ts  soa_c.ts  stringUtils.ts  style.ts  types.ts  utils.ts
src/schema/: descriptor.json
src/templates/: definitions.ts  functions.ts  heading.ts  includes.ts  soa.c.template  soa.h.template  soa.heading.template  soaHeader.ts  soaSource.ts  structures.ts
src/utils/: makeCIdentifier.ts
